# Copyright 2020 The Lynx Authors. All rights reserved.
# Licensed under the Apache License Version 2.0 that can be found in the
# LICENSE file in the root directory of this source tree.
script_executable = rebase_path("//.venv/bin/python3")

buildconfig = "//build/config/BUILDCONFIG.gn"

secondary_source = "//build/secondary/"

root = "//lynx:root"

default_args = {
  lynx_dir = "lynx"
}
